--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "deriving"
-version = "0.1.0"
+version = "0.1.1"
 description = "Framework to make implementing custom derive easier."
 license = "Apache-2.0"
 authors = ["Wei Tang <hi@that.world>"]
 edition = "2018"
 
 [dependencies]
+syn = { version = "0.15", features = ["extra-traits"] }
+quote = "0.6"
